--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>Employee Sign-Up</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='signin.css') }}">
+    <title>Employee Sign In</title>
 </head>
 <body>
-    <h1>Welcome to Mary Low Scheduling!  Sign-up here:</h1>
+    <h1>Welcome to Mary Low Scheduling!</h1>
+    <br>
+    <h2>Sign in here: </h2>
+
+
     <form method="POST">
         <input type="text" placeholder="Username" name="username">
         <input type="password" placeholder="Password" name="password">
         <input type="submit" value="Sign In">
     </form>
+    
 </body>
 </html>
