--- a/static/signin.css
+++ b/static/signin.css
@@ -1,3 +1,4 @@
+
 body, button, input {
     font-family: 'Sen', sans-serif;
 }
@@ -25,6 +26,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px; 
 }
 
 #LogInContainer h2 {
@@ -38,6 +40,7 @@ h1 {
     border-radius: 3px;
     width: 400px;
     padding: 10px;
+    margin-bottom: 10px;
 }
 
 #LogInContainer button {
@@ -48,7 +51,7 @@ h1 {
     border: none;
     font-size: 15px; 
     cursor: pointer;
-    margin-top: 5px;
+    margin-top: 10px;
     margin-bottom: 15px;
 }
 
