--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='schedule.css') }}">
-    <title>Employee Sign Up</title>
+    <title>Employee Schedule</title>
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
         <section class="schedule-section">
             <div class="schedule-header">
                 <h2>My Schedule</h2>
-                <h3>My Availability | Events</h3>
+                <h3>My Schedule | Events</h3>
             </div>
 
             <div class="toolbar">
@@ -37,39 +37,111 @@
 
             <div class="schedule-grid">
                 <div class="time-labels">
-                    <span>12AM</span>
-                    <span>2AM</span>
-                    <span>4AM</span>
-                    <span>6AM</span>
+                    <span></span>
+                    <span>7AM</span>
                     <span>8AM</span>
+                    <span>9AM</span>
                     <span>10AM</span>
+                    <span>11AM</span>
                     <span>12PM</span>
+                    <span>1PM</span>
                     <span>2PM</span>
+                    <span>3PM</span>
                     <span>4PM</span>
-                    <span>6PM</span>
-                    <span>8PM</span>
-                    <span>10PM</span>
-                </div>
-                <div class="day-labels">
-                <ol>
-                    <li id="Monday">Monday</li>
-                    <li id = "Tuesday">Tuesday</li>
-                    <li id = "Wednesday">Wednesday</li>
-                    <li id = "Thursday">Thursday</li>
-                    <li id = "Friday">Friday</li>
-                    <li id = "Saturday">Saturday</li>
-                    <li id = "Sunday">Sunday</li>
-                </ol>
-                </div>
+                    <span>5PM</span>
 
-                <!-- Repeat this for each time slot -->
-                <div class="grid-row">
-                    <div class="cell"><button class="add-btn">Add +</button></div>
+                <div class="day-labels">
+                    <div class="day-labels">Monday <button class="add-btn">Add +</button></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
-                    <!-- Repeat for every time column -->
-                </div>
-                <!-- Repeat for each day of the week -->
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+
+
+                    <div class="day-labels">Tuesday <button class="add-btn">Add +</button></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+
+                <div class="day-labels">Wednesday <button class="add-btn">Add +</button></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+
+                <div class="day-labels">Thursday <button class="add-btn">Add +</button></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                
+                <div class="day-labels">Friday <button class="add-btn">Add +</button></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                
+                <div class="day-labels">Saturday <button class="add-btn">Add +</button></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+
+                <div class="day-labels">Sunday <button class="add-btn">Add +</button></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
             </div>
         </section>
     </main>
