--- a/templates/unavailability.html
+++ b/templates/unavailability.html
@@ -36,22 +36,145 @@
             </div>
 
             <div class="availability-grid">
+
+                <!-- <div></div>
+                <div class="time-labels">7AM</div>
+                <div class="time-labels">8AM</div>
+                <div class="time-labels">9AM</div>
+                <div class="time-labels">10AM</div>
+                <div class="time-labels">11AM</div>
+                <div class="time-labels">12PM</div>
+                <div class="time-labels">1PM</div>
+                <div class="time-labels">2PM</div>
+                <div class="time-labels">3PM</div>
+                <div class="time-labels">4PM</div>
+                <div class="time-labels">5PM</div>
+                <div class="time-labels">6PM</div> -->
                 <div class="time-labels">
-                    <span>12AM</span>
-                    <span>2AM</span>
-                    <span>4AM</span>
-                    <span>6AM</span>
+                    <span></span>
+                    <span>7AM</span>
                     <span>8AM</span>
+                    <span>9AM</span>
                     <span>10AM</span>
+                    <span>11AM</span>
                     <span>12PM</span>
+                    <span>1PM</span>
                     <span>2PM</span>
+                    <span>3PM</span>
                     <span>4PM</span>
-                    <span>6PM</span>
-                    <span>8PM</span>
-                    <span>10PM</span>
+                    <span>5PM</span>
+                    <!-- <span>6PM</span> -->
                 </div>
+                <div class="day-labels">Monday <button class="add-btn">Add +</button></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    
+
+                <div class="day-labels">Tuesday <button class="add-btn">Add +</button></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+
+                <div class="day-labels">Wednesday <button class="add-btn">Add +</button></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+
+                <div class="day-labels">Thursday <button class="add-btn">Add +</button></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                
+                <div class="day-labels">Friday <button class="add-btn">Add +</button></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                
+                    <div class="day-labels">Saturday <button class="add-btn">Add +</button></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+
+                <div class="day-labels">Sunday <button class="add-btn">Add +</button></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+
+
+                <!-- <div class="time-labels">
+                    <span>7AM</span>
+                    <span>8AM</span>
+                    <span>9AM</span>
+                    <span>10AM</span>
+                    <span>11AM</span>
+                    <span>12PM</span>
+                    <span>1PM</span>
+                    <span>2PM</span>
+                    <span>3PM</span>
+                    <span>4PM</span>
+                    <span>5PM</span>
+                    <span>6PM</span>
+                </div>
+                
                 <div class="day-labels">
-                <ol>
+                    <ol>
                     <li id="Monday">Monday <button class="add-btn">Add +</button></li>
                     <li id = "Tuesday">Tuesday<button class="add-btn">Add +</button></li>
                     <li id = "Wednesday">Wednesday<button class="add-btn">Add +</button></li>
@@ -59,11 +182,10 @@
                     <li id = "Friday">Friday<button class="add-btn">Add +</button></li>
                     <li id = "Saturday">Saturday<button class="add-btn">Add +</button></li>
                     <li id = "Sunday">Sunday<button class="add-btn">Add +</button></li>
-                </ol>
+                    </ol>
                 </div>
 
-                <!-- Repeat this for each time slot -->
-                <div class="grid-row">
+                <div class="schedule-grid">
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
@@ -71,8 +193,12 @@
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
-                    <!-- Repeat for every time column -->
-                </div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div> 
+                </div> -->
                 <!-- Repeat for each day of the week -->
             </div>
         </section>
