--- a/static/schedule.css
+++ b/static/schedule.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #f4f4f4;
+    background-color: black;
     color: #333;
 }
 
@@ -30,14 +30,14 @@ main {
     padding: 20px;
 }
 
-.availability-section {
+.schedule-section {
     background-color: white;
-    padding: 20px;
+    padding: 10px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.availability-header {
+.schedule-header {
     text-align: center;
     margin-bottom: 20px;
 }
@@ -59,16 +59,16 @@ main {
     cursor: pointer;
 }
 
-.availability-grid {
+.schedule-grid {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(8, auto);
-    gap: 1px;
     background-color: #222;
 }
 
 .time-labels {
-    grid-column: 1 / -1;
+    grid-column: 1 / -1; 
+    grid-row: 1;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     background-color: #eee;
@@ -93,18 +93,18 @@ main {
 
 .day-labels li{
     list-style-type: none;
-    padding: 50px
+    padding: 25px
 }
 
-.grid-row {
+.schedule-grid {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: 50px repeat(12, 1fr);
+    grid-template-rows: 100px repeat(7, 1fr);  
 }
 
 .cell {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    padding: 15px;
+    background-color: black;
+    border: 1px solid white;
     text-align: center;
 }
 
