--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -7,9 +7,8 @@
 <body>
     <header>
         <div class="header-content">
-            <h1>User name to add later</h1>
             <div class="header-right">
-                <span>Name to Add later</span>
+                <h1>Welcome, {{name}}</h1>
             </div>
         </div>
     </header>
@@ -18,7 +17,6 @@
             <section class="schedule-section">
             <div class="schedule-header">
                 <h2>My Schedule</h2>
-                <h3>My Availability | Events</h3>
             </div>
 
             <div class="toolbar">
