Added data setting to database

--- a/templates/unavailability.html
+++ b/templates/unavailability.html
@@ -23,10 +23,11 @@
 
             <div class="toolbar">
                 <div class="tags">
-                    <button>Class +</button>
-                    <button>Exam +</button>
-                    <button>Busy +</button>
-                    <button>...</button>
+                    <form method = "POST">
+                        <button class="add-btn" type = "submit">Add +</button>
+                        <input type = "datetime-local" name = "start-time-input" placeholder="start time"/>
+                        <input type = "datetime-local" name = "end-time-input" placeholder="end time"/>
+                    </form>
                 </div>
                 <div class="options">
                     <button>New</button>
@@ -51,7 +52,9 @@
                     <span>5PM</span>
                 </div>
                 
-                <div class="day-labels">Monday <button class="add-btn">Add +</button></div>
+                <div class="day-labels">Monday 
+                    
+                </div>
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
@@ -65,7 +68,7 @@
                     <div class="cell"></div>
                     
 
-                <div class="day-labels">Tuesday <button class="add-btn">Add +</button></div>
+                <div class="day-labels">Tuesday</div>
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
@@ -78,7 +81,7 @@
                     <div class="cell"></div>
                     <div class="cell"></div>
 
-                <div class="day-labels">Wednesday <button class="add-btn">Add +</button></div>
+                <div class="day-labels">Wednesday </div>
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
@@ -91,7 +94,7 @@
                     <div class="cell"></div>
                     <div class="cell"></div>
 
-                <div class="day-labels">Thursday <button class="add-btn">Add +</button></div>
+                <div class="day-labels">Thursday </div>
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
@@ -104,7 +107,7 @@
                     <div class="cell"></div>
                     <div class="cell"></div>
                 
-                <div class="day-labels">Friday <button class="add-btn">Add +</button></div>
+                <div class="day-labels">Friday </div>
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
@@ -117,7 +120,7 @@
                     <div class="cell"></div>
                     <div class="cell"></div>
                 
-                    <div class="day-labels">Saturday <button class="add-btn">Add +</button></div>
+                    <div class="day-labels">Saturday </div>
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
@@ -130,7 +133,7 @@
                     <div class="cell"></div>
                     <div class="cell"></div>
 
-                <div class="day-labels">Sunday <button class="add-btn">Add +</button></div>
+                <div class="day-labels">Sunday </div>
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
