--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -21,6 +21,7 @@
 
             <div class="toolbar">
                 <div class="tags">
+                    <a class = button href = 'unavailability'>Availability</a>
                     <button>Today</button>
                 </div>
                 <div class="options">
