--- a/templates/unavailability.html
+++ b/templates/unavailability.html
@@ -24,6 +24,7 @@
             <div class="toolbar">
                 <div class="tags">
                     <form method = "POST">
+                        <a class="button" href="schedule">Schedule</a>
                         <button class="add-btn" type = "submit">Add +</button>
                         <input type = "datetime-local" name = "start-time-input" placeholder="start time"/>
                         <input type = "datetime-local" name = "end-time-input" placeholder="end time"/>
