--- a/static/availability.css
+++ b/static/availability.css
@@ -1,4 +1,3 @@
-/* Reset and base styles */
 * {
     margin: 0;
     padding: 0;
@@ -31,7 +30,6 @@ main {
     padding: 20px;
 }
 
-/* Button styles */
 .button {
     margin-right: 10px;
     padding: 8px 12px;
@@ -56,7 +54,6 @@ main {
     background-color: #45a049;
 }
 
-/* Section and grid layout */
 .availability-section {
     background-color: white;
     padding: 10px;
@@ -127,9 +124,9 @@ main {
     text-align: center;
 }
 
-/* Modal styles */
+
 .modal {
-    display: none; /* Hidden by default */
+    display: none; /*default hidden*/
     position: fixed;
     z-index: 1;
     left: 0;
@@ -137,7 +134,7 @@ main {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5); /* Black with opacity */
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-content {
@@ -164,7 +161,6 @@ main {
     cursor: pointer;
 }
 
-/* Availability list for added times */
 .availability-list {
     margin-top: 20px;
     padding: 10px;
